Update error managment
